syntax = "proto3";
option java_package = "me.hanslovsky.n5.grpc.generated";
package me.hanslovsky.n5.grpc.generated;

import "google/protobuf/struct.proto";

service N5GRPCService {
  rpc ReadBlock(BlockMeta) returns (NullableBlock);
  rpc Exists(Path) returns (BooleanFlag);
  rpc DatasetExists(Path) returns (BooleanFlag);
  rpc List(Path) returns (Paths);
  rpc GetAttributes(Path) returns (JsonString);
  rpc GetDatasetAttributes(Path) returns (NullableDatasetAttributes);
  rpc HealthCheck(HealthRequest) returns (HealthStatus);
}

message Path {
  string pathName = 1;
}

message Paths {
  repeated Path paths = 1;
}

message JsonString {
  string jsonString = 1;
}

message BooleanFlag {
  bool flag = 1;
}

message BlockMeta {
  Path path = 1;
  repeated uint64 gridPosition = 2 [packed=true];
  DatasetAttributes datasetAttributes = 3;
}

message Block {
  bytes data = 1;
  // TODO should Block hold its position and size? Could be used for confirmation purposes
}

message NullableBlock {
  oneof kind {
    Block block = 1;
    google.protobuf.NullValue empty = 2;
  }
}

message DatasetAttributes {
  repeated uint64 dimensions = 1 [packed=true];
  repeated uint32 blockSize = 2 [packed=true];
  string dataType = 3;
  string compressionJsonString = 4;
}

message NullableDatasetAttributes {
  oneof kind {
    DatasetAttributes datasetAttributes = 1;
    google.protobuf.NullValue empty = 2;
  }
}

message HealthRequest {}

message HealthStatus {
  enum Status {
    SERVING = 0;
    NOT_SERVING = 1;
    UNKNOWN = 2;
  }
  Status status = 1;
}